// Wrapper for New Relic Go Agent

syntax = "proto3";

option go_package = ".;protos";

package protos;

message Config {
  string name = 1;
  string license = 2;
  string host = 3;
}

message Index {
  uint64 idx = 1;
}

message NameIndex {
  uint64 idx = 1;
  string name = 2;
}

message LogIndex {
  uint64 idx = 1;
  int32 level = 2;
  string message = 3;
}

service GoAgent {
  rpc CreateApp (Config) returns (Index) {};
  rpc NewTxn (NameIndex) returns (Index) {};
  rpc NewSeg (NameIndex) returns (Index) {};
  rpc EndSeg (Index) returns (Index) {};
  rpc EndTxn (Index) returns (Index) {};
  rpc LogTxn (LogIndex) returns (Index) {};
}
